--- a/docs/style.css
+++ b/docs/style.css
@@ -1,21 +1,53 @@
-body {
-  font-family: Arial, sans-serif;
-  margin: 20px;
+body{
+  background-color: #f5f5f5;
 }
 
-h1 {
-  color: #333;
-  text-decoration: underline;
+.main-div{
+  display: flex;
+  flex-direction: column;
 }
 
-p {
-  margin-bottom: 10px;
+.header{
   text-align: center;
+  font-size: 1.8rem;
+  font-weight: bold;
 }
 
-code {
-  background-color: #f1f1f1;
-  padding: 2px 5px;
-  border-radius: 3px;
+p{
+  margin:0;
 }
 
+.contact{
+  font-size: 1.1rem;
+  display: flex;
+  gap: 2rem;
+  justify-content: center;
+}
+
+@media (max-width: 600px){
+  
+  .header{
+    font-size: 1.5rem;
+  }
+
+  .contact{
+    flex-direction: column;
+    font-size: 1.1rem;
+  }
+}
+
+
+
+.functions{
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.titles{
+  font-weight: bold;
+}
+
+code{
+  background-color: lightgray;
+}
